[package]
name = "demo_oc3_2024"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "*", features = ["derive"] }
hex = { version = "*", default-features = false }
oak_attestation_verification = { workspace = true }
oak_proto_rust = { workspace = true }
prost = { workspace = true }
