[workspace]
members = [
  "abitest/abitest_common",
  "abitest/grpc",
  "abitest/module_0/rust",
  "abitest/module_1/rust",
  "aggregator/backend",
  "aggregator/grpc",
  "aggregator/common",
  "aggregator/module/rust",
  "authentication/client",
  "chat/module/rust",
  "hello_world/grpc",
  "hello_world/module/rust",
  "machine_learning/module/rust",
  "trusted_information_retrieval/backend",
  "trusted_information_retrieval/client/rust",
  "trusted_information_retrieval/module/rust",
  "private_set_intersection/grpc",
  "private_set_intersection/module/rust",
  "running_average/grpc",
  "running_average/module/rust",
  "translator/grpc",
  "translator/common",
  "translator/module/rust",
]

# Patch dependencies on oak crates so that they refer to the versions within this same repository.
#
# From https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html :
# > Cargo doesn’t assume that crates in a workspace will depend on each other, so we need to be
# > explicit about the dependency relationships between the crates.
[patch.crates-io]
# Oak.
oak = { path = "../sdk/rust/oak" }
oak_abi = { path = "../oak_abi" }
oak_runtime = { path = "../oak/server/rust/oak_runtime" }
oak_tests = { path = "../sdk/rust/oak_tests" }
oak_utils = { path = "../oak_utils" }
# Examples.
abitest_grpc = { path = "abitest/grpc" }
aggregator_grpc = { path = "aggregator/grpc" }
hello_world_grpc = { path = "hello_world/grpc" }
private_set_intersection_grpc = { path = "private_set_intersection/grpc" }
running_average_grpc = { path = "running_average/grpc" }
translator_grpc = { path = "translator/grpc" }
translator_common = { path = "translator/common" }
trusted_information_retrieval_client = { path = "trusted_information_retrieval/client/rust" }
# Third party.
expect = { path = "../third_party/expect" }
roughenough = { path = "../third_party/roughenough" }
