[workspace]
members = [
  "abitest/abitest_common",
  "abitest/grpc",
  "abitest/module_0/rust",
  "abitest/module_1/rust",
  "aggregator/backend",
  "aggregator/grpc",
  "aggregator/common",
  "aggregator/module/rust",
  "authentication/client",
  "chat/module/rust",
  "hello_world/grpc",
  "hello_world/module/rust",
  "injection/module/rust",
  "machine_learning/module/rust",
  "trusted_information_retrieval/backend",
  "trusted_information_retrieval/client/rust",
  "trusted_information_retrieval/module_0/rust",
  "trusted_information_retrieval/module_1/rust",
  "private_set_intersection/grpc",
  "private_set_intersection/module/rust",
  "running_average/grpc",
  "running_average/module/rust",
  "translator/grpc",
  "translator/common",
  "translator/module/rust",
  "minimal/client/rust",
  "minimal/module/rust",
]

# Patch dependencies on oak crates so that they refer to the versions within this same repository.
#
# From https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html :
# > Cargo doesn’t assume that crates in a workspace will depend on each other, so we need to be
# > explicit about the dependency relationships between the crates.
[patch.crates-io]
# Oak.
oak = { path = "../sdk/rust/oak" }
oak_abi = { path = "../oak_abi" }
oak_derive = { path = "../sdk/rust/oak_derive" }
oak_runtime = { path = "../oak/server/rust/oak_runtime" }
oak_tests = { path = "../sdk/rust/oak_tests" }
oak_utils = { path = "../oak_utils" }
# Examples.
abitest_grpc = { path = "abitest/grpc" }
aggregator_grpc = { path = "aggregator/grpc" }
database_proxy = { path = "trusted_information_retrieval/module_1/rust" }
hello_world_grpc = { path = "hello_world/grpc" }
private_set_intersection_grpc = { path = "private_set_intersection/grpc" }
running_average_grpc = { path = "running_average/grpc" }
translator_common = { path = "translator/common" }
translator_grpc = { path = "translator/grpc" }
trusted_information_retrieval_client = { path = "trusted_information_retrieval/client/rust" }
minimal_client = { path = "minimal/client/rust" }
# Third party.
expect = { path = "../third_party/expect" }
roughenough = { path = "../third_party/roughenough" }
prost = { path = "../third_party/prost" }
prost-build = { path = "../third_party/prost/prost-build" }
prost-derive = { path = "../third_party/prost/prost-derive" }
prost-types = { path = "../third_party/prost/prost-types" }
