[workspace]
members = [
  "abitest/abitest_common",
  "abitest/grpc",
  "abitest/module_linear_handles/rust",
  # "abitest/module_0" and "abitest/module_1" are excluded and have their own workspaces as they
  # must be built without the "linear-handles" feature.
  "aggregator/backend",
  "aggregator/grpc",
  "aggregator/common",
  "aggregator/module/rust",
  "authentication/client",
  "chat/module/rust",
  "chat/grpc",
  "hello_world/grpc",
  "hello_world/client/rust",
  "hello_world/module/rust",
  "http_server/module",
  "http_server/client/rust",
  "https_attestation/backend",
  "https_attestation/client",
  "injection/module/rust",
  "trusted_database/client/rust",
  "trusted_database/module/rust",
  "private_set_intersection/grpc",
  "private_set_intersection/client/rust",
  "private_set_intersection/main_module/rust",
  "private_set_intersection/handler_module/rust",
  "proxy_attestation/client/rust",
  "proxy_attestation/module/rust",
  "tls_attestation/backend",
  "tls_attestation/client/rust",
  "translator/grpc",
  "translator/common",
  "translator/module/rust",
]

# Patch dependencies on oak crates so that they refer to the versions within this same repository.
#
# From https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html :
# > Cargo doesn’t assume that crates in a workspace will depend on each other, so we need to be
# > explicit about the dependency relationships between the crates.
[patch.crates-io]
# Oak.
oak = { path = "../sdk/rust/oak" }
oak_abi = { path = "../oak_abi" }
oak_attestation_common = { path = "../experimental/attestation_common" }
oak_client = { path = "../oak_client" }
oak_derive = { path = "../oak_derive" }
oak_io = { path = "../oak_io" }
oak_proxy_attestation = { path = "../experimental/proxy_attestation" }
oak_runtime = { path = "../oak_runtime" }
oak_services = { path = "../oak_services" }
oak_sign = { path = "../oak_sign" }
oak_tests = { path = "../sdk/rust/oak_tests" }
oak_utils = { path = "../oak_utils" }
# Examples.
abitest_grpc = { path = "abitest/grpc" }
aggregator_grpc = { path = "aggregator/grpc" }
chat_grpc = { path = "chat/grpc" }
hello_world_client = { path = "hello_world/client/rust" }
hello_world_grpc = { path = "hello_world/grpc" }
private_set_intersection_grpc = { path = "private_set_intersection/grpc" }
private_set_intersection_handler = { path = "private_set_intersection/handler_module/rust" }
translator_common = { path = "translator/common" }
translator_grpc = { path = "translator/grpc" }
trusted_database_client = { path = "trusted_database/client/rust" }
# Third party.
roughenough = { path = "../third_party/roughenough" }
prost = { path = "../third_party/prost" }
prost-build = { path = "../third_party/prost/prost-build" }
prost-derive = { path = "../third_party/prost/prost-derive" }
prost-types = { path = "../third_party/prost/prost-types" }
