[workspace]
members = [
  "oak_async",
  "split_grpc/client",
  "split_grpc/proxy",
  "split_grpc/server",
  "benchmark",
  "attestation_common",
  "proxy_attestation",
  "tls_attestation",
  "https_attestation",
  "gcp_api_gateway/client",
  "gcp_api_gateway/server",
  "tf_proxy/client",
  "tf_proxy/server",
]

[patch.crates-io]
# Oak.
oak = { path = "../sdk/rust/oak" }
oak_abi = { path = "../oak_abi" }
oak_client = { path = "../oak_client" }
oak_derive = { path = "../oak_derive" }
oak_io = { path = "../oak_io" }
oak_runtime = { path = "../oak_runtime" }
oak_services = { path = "../oak_services" }
oak_sign = { path = "../oak_sign" }
oak_tests = { path = "../sdk/rust/oak_tests" }
oak_utils = { path = "../oak_utils" }
# Examples.
trusted_database_client = { path = "../examples/trusted_database/client/rust" }
# Third party.
prost = { path = "../third_party/prost" }
prost-build = { path = "../third_party/prost/prost-build" }
prost-derive = { path = "../third_party/prost/prost-derive" }
prost-types = { path = "../third_party/prost/prost-types" }
