[package]
name = "oak_fuzz"
version = "0.0.0"
authors = ["Razieh Behjati <razieh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = "*"
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "*"
oak_functions_abi = { path = "../oak_functions_abi" }

[build-dependencies]
prost-build = "*"

# Prevent this from interfering with workspaces
[workspace]
resolver = "2"
members = ["."]

[[bin]]
name = "apply_policy"
path = "fuzz_targets/apply_policy.rs"
test = false
doc = false
