[package]
name = "grpc_unary_attestation"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
oak_remote_attestation = { path = "../remote_attestation/rust/" }
anyhow = "*"
prost = "*"
prost-types = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = [
  "fs",
  "macros",
  "process",
  "sync",
  "rt-multi-thread"
] }
oak_utils = { path = "../oak_utils" }
tonic = "*"
tower = "*"
lru = "*"

[build-dependencies]
oak_utils = { path = "../oak_utils" }
