module(name = "oak_linter")

bazel_dep(name = "rules_rust", version = "0.68.1")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.4",
)
crate.spec(
    package = "colored",
    version = "3.0",
)
crate.spec(
    package = "ignore",
    version = "0.4",
)
crate.spec(
    package = "lazy_static",
    version = "1.5",
)
crate.spec(
    package = "regex",
    version = "1.12",
)
crate.from_specs()
use_repo(crate, "crates")
