[package]
name = "micro_rpc_tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
async-trait = "*"
maplit = "*"
micro_rpc = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
micro_rpc_build = { workspace = true }
