[package]
name = "micro_rpc_workspace_test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
oak_proto_rust = { path = "../oak_proto_rust" }
micro_rpc = { path = "../micro_rpc" }
prost = "*"
tonic = "*"

[build-dependencies]
oak_grpc_utils = { path = "../oak_grpc_utils" }

[workspace]
