[package]
name = "oak_attestation_verification"
version = "0.1.0"
authors = ["Razieh Behjati <razieh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
std = ["time/formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "*", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
coset = { version = "*", default-features = false }
ecdsa = { version = "*", features = ["pkcs8", "pem"] }
getrandom = { version = "*", features = [
  # While getrandom isn't used directly, rdrand is required to support x64_64-unknown-none.
  "rdrand"
] }
hex = { version = "*", default-features = false }
oak_dice = { workspace = true }
oak_proto_rust = { workspace = true }
oak_sev_guest = { workspace = true }
p256 = { version = "*", default-features = false, features = [
  "alloc",
  "ecdsa-core",
  "ecdsa",
  "pem"
] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false, features = ["alloc"] }
sha2 = { version = "*", default-features = false }
time = { version = "0.3.28", default-features = false, features = [
  "serde",
  "parsing"
] }
zerocopy = "*"

[dev-dependencies]
prost = { workspace = true }
