[package]
name = "oak_attestation_verification_test_utils"
version = "0.1.0"
authors = ["Juliette Pluto <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Shared utilities for testing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
oak_proto_rust = { workspace = true }
