[package]
name = "oak_channel"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = []
std = []
client = ["std", "oak_idl/async-clients"]

[dependencies]
anyhow = { version = "*", default-features = false }
oak_idl = { path = "../oak_idl" }
oak_protobuf_idl = { path = "../oak_protobuf_idl" }
static_assertions = "*"
bitflags = "*"
