[package]
name = "oak_channel"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = []
std = []
client = ["std"]

[dependencies]
anyhow = { version = "*", default-features = false }
log = { version = "*", default-features = false }
micro_rpc = { workspace = true }
oak_core = { workspace = true }
oak_channel_core = { workspace = true }
static_assertions = "*"
bitflags = "*"
bytes = { version = "*", default-features = false }
