[package]
name = "oak_client"
version = "0.1.0"
authors = ["Ivan Petrov <ivanpetrov@google.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
oak-attestation = [
  "hyper-rustls",
  "oak_attestation_common",
  "openssl",
  "regex",
  "tokio-rustls",
  "x509-parser",
  "webpki"
]

[dependencies]
anyhow = "*"
http = "*"
hyper = { version = "*", features = ["client"] }
hyper-rustls = { version = "*", default-features = false, features = [
  "webpki-tokio"
], optional = true }
log = "*"
oak_abi = { path = "../oak_abi" }
oak_attestation_common = { path = "../experimental/attestation_common", optional = true }
oak_sign = { path = "../oak_sign" }
openssl = { version = "*", optional = true }
prost = { path = "../third_party/prost" }
regex = { version = "*", optional = true }
tokio-rustls = { version = "*", features = [
  "dangerous_configuration"
], optional = true }
tonic = { version = "*", features = ["tls"] }
x509-parser = { version = "*", optional = true }
webpki = { version = "*", optional = true }
