[package]
name = "oak_client"
version = "0.1.0"
authors = ["Ivan Petrov <ivanpetrov@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "*"
async-trait = "*"
futures-util = "*"
log = "*"
micro_rpc = { workspace = true }
oak_crypto = { workspace = true }
oak_remote_attestation_noninteractive = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
oak_grpc_utils = { workspace = true }
