[package]
name = "oak_containers_hello_world_trusted_app"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
oak_grpc_utils = { workspace = true }

[dependencies]
anyhow = "*"
oak_containers_sdk = { workspace = true }
oak_crypto = { workspace = true }
oak_proto_rust = { workspace = true }
prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "*", features = ["net"] }
tonic = { workspace = true }
async-stream = "*"
bytes = "*"
tower = "*"
