[package]
name = "oak_containers_hello_world_untrusted_app"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
oak_grpc_utils = { workspace = true }

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
env_logger = "*"
log = "*"
oak_client = { workspace = true }
oak_containers_launcher = { workspace = true }
oak_crypto = { workspace = true }
oak_proto_rust = { workspace = true }
prost = "*"
tokio = { version = "*", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tonic = "*"
tower = "*"

[dev-dependencies]
duct = "*"
once_cell = "*"
xtask = { workspace = true }
