[package]
name = "oak_containers_launcher"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "*"
prost = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros", "sync"] }
clap = { version = "*", features = ["derive"] }
oak_containers_launcher_server = { workspace = true }
