[package]
name = "oak_containers_launcher"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
oak_grpc_utils = { workspace = true }

[dependencies]
anyhow = "*"
async-stream = "*"
bytes = "*"
clap = { version = "*", features = ["derive"] }
command-fds = { version = "*", features = ["tokio"] }
env_logger = "*"
futures = "*"
log = "*"
nix = { version = "*", features = ["process"] }
oak_attestation = { workspace = true }
oak_crypto = { workspace = true }
oak_proto_rust = { workspace = true }
opentelemetry-proto = { version = "*", default-features = false, features = [
  "gen-tonic",
  "logs",
  "metrics",
] }
prost = "*"
prost-types = "*"
tokio = { version = "*", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "sync",
] }
tokio-stream = { version = "*", features = ["net"] }
tokio-vsock = { version = "*", features = ["tonic-conn"] }
tonic = { workspace = true, features = ["codegen"] }
which = "*"
