[package]
name = "oak_containers_orchestrator"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
log = "*"
oak_containers_orchestrator_client = { workspace = true }
oak_crypto = { workspace = true }
oak_remote_attestation = { workspace = true }
opentelemetry_api = { version = "*", default-features = false, features = [
  "metrics"
] }
opentelemetry_sdk = { version = "*", default-features = false, features = [
  "metrics",
  "rt-tokio"
] }
opentelemetry-otlp = { version = "*", default-features = false, features = [
  "metrics"
] }
prost = "*"
prost-types = "*"
procfs = "*"
syslog = "*"
tar = "*"
tokio = { version = "*", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "fs",
  "process",
  "net",
] }
tokio-stream = { version = "*", features = ["net"] }
tonic = { workspace = true }

[build-dependencies]
oak_grpc_utils = { workspace = true }
