[package]
name = "oak_containers_orchestrator"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "*"
ciborium = { version = "*", default-features = false }
clap = { version = "*", features = ["derive"] }
coset = { version = "*", features = ["std"] }
hpke = { version = "*", default-features = false, features = [
  "alloc",
  "x25519",
] }
log = "*"
nix = { version = "*", features = ["user"] }
oak_attestation = { workspace = true }
oak_attestation_verification = { workspace = true }
oak_crypto = { workspace = true }
oak_dice = { workspace = true }
oak_proto_rust = { workspace = true }
oci-spec = "*"
opentelemetry = { version = "*", default-features = false, features = [
  "metrics",
] }
opentelemetry_sdk = { version = "*", default-features = false, features = [
  "metrics",
  "rt-tokio",
] }
opentelemetry-otlp = { version = "*", default-features = false, features = [
  "grpc-tonic",
  "metrics",
] }
p256 = { version = "*", features = ["ecdsa"] }
prost = "*"
prost-types = "*"
rand_core = { version = "*", default-features = false, features = [
  "getrandom",
] }
sha2 = { version = "*", default-features = false }
syslog = "*"
tar = "*"
tikv-jemallocator = "*"
tokio = { version = "*", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "fs",
  "process",
  "net",
] }
tokio-stream = { version = "*", features = ["net"] }
tokio-util = { version = "*", default-features = false }
tonic = { workspace = true }
walkdir = "*"
zeroize = "*"

[build-dependencies]
oak_grpc_utils = { workspace = true }
